lib/tests/fixtures/compiler/parser/return_in_interpolation.baseline
Error: return_in_interpolation.pp:2:42: return statement cannot be used inside an interpolated string.
  "${ 'foo'.each |$x| { if $x == 'o' { return } $x } }"
                                       ^~~~~~
